--- a/P520233_AllanDelgado/App.config
+++ b/P520233_AllanDelgado/App.config
@@ -2,7 +2,7 @@
 <configuration>
 
 	<connectionStrings>
-		<add name="CNNSTR" connectionString="Server=ADI-DEV* ; DataBase=Progra5_2023_3_Inventario ; Integrated Security=true ; User Id=algunusuario ; Password= eewerteretr; "/>
+		<add name="CNNSTR" connectionString="Server=ADI-DEV; DataBase=Progra5_2023_3_Inventario ; Integrated Security=true ; User Id=algunusuario ; Password= eewerteretr; "/>
 	</connectionStrings>
 	
     <startup> 
