--- a/P520233_AllanDelgado/P520233_AllanDelgado.csproj
+++ b/P520233_AllanDelgado/P520233_AllanDelgado.csproj
@@ -74,6 +74,7 @@
     <Compile Include="Globales\ObjetosGlobales.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Tools\Validaciones.cs" />
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
     </EmbeddedResource>
